Improvements after testing to compile structures for SEQUENCE/SET OF support Most issues with SEQUENCE/SET OF support appear to have been resolved Remaining corner case: RFC 4373 UpdateOperationList in DER_OFFSET() needs _0
DONE: Controls below, translates with bad/default field names; idd geen name, want geen SEQUENCE!
DONE: No psub generated for SearchResultEntry, which refers to a def with SEQUENCE OF
DONE: Endless recursion for PSUB from RFC 4511: Filter -> and -> Filter, see below
DONE: Filter -> substrings -> SubstringFilters -> substrings: 2x offsetof() but both on _Filter
DONE: Recursive includes of ASN.1 modules
DONE: Define struct psub_somestruct and consider if it needs a size for the repeated type
DONE: Do not generate derwalk[] and struct psub_somestruct when out-of-module / out-of-type
DONE: Refs like DER_xxxx_mod_tp_at have tp=dest instead of tp=source: AuthzData_authz_data in Authn
DONE: Generate DER_PACK_mod_tp_at when tp.at is a repeated type / follow NamedType coolness too
DONE: Generate DER_OVLY_mod_tp_at when tp.at is a repeated type / follow NamedType coolness too
DONE: Test that all definitions are found, and it can all compile properly
DONE: Badly gen'd DER_ELEMSZ (rfc4511,AttributeList,0) --> should be ,attribute) due to NamedType
DONE: Badly gen'd DER_PACK/PSUB_rfc4511_AttributesList_0 should be _attribute due to NamedType
DONE: Check _mod_tp: rfc4373.UpdateOperationList -> SEQ-OF-SEQ -> AddRequest -> attributes -> SEQ-OF
DONE: rfc4373.UpdateOperationList, updateOperation.addRequest offsets both in UpdateOperationList
DONE: rfc4373 nested structs, moet zijn: updoplist_0 -> dan + updateOperation -> dan + addRequest
TODO: rfc4373 has UpdateOperationList_0 type yet skips the _0 as if it were a default, not element
DONE: Write library routines to support memory allocating applications that use Quick DER
DONE: struct DER_OVLY_xyz before the field defs does not mean that plain type DER_OVLY_xyz exists
DONE: DER_OFFSET / DER_ELEMSZ could use "stru

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -9,14 +9,17 @@ endif()
 add_definitions(-Wall -Wextra -pedantic)
 
 set(quickder_SRC
-	der_data.c
 	der_header.c
 	der_iterate.c
 	der_pack.c
 	der_prepack.c
 	der_skipenter.c
 	der_unpack.c
-	der_walk.c)
+	der_unpack_all.c
+	der_walk.c
+	der_get_int32.c
+	der_get_uint32.c
+)
 
 add_library (quickderShared SHARED ${quickder_SRC})
 set_target_properties (quickderShared
