--- a/arpa2/CMakeLists.txt
+++ b/arpa2/CMakeLists.txt
@@ -1,17 +1,17 @@
-# Conversion of ASN.1 specs to convenient header files
-include(MacroASN1Header)
+# Conversion of ASN.1 specs to convenient C header files and Python packages
+include(MacroASN1Module)
 
 include_directories(${CMAKE_BINARY_DIR}/rfc)
 
 set_asn2quickder_options(-I ${CMAKE_SOURCE_DIR}/rfc)
 
-add_custom_target(arpa2-headers ALL)
-add_asn1_headers(arpa2-headers
+add_custom_target(arpa2-modules ALL)
+add_asn1_modules(arpa2-modules
 	kxover
 	RemotePKCS11
 	)
 
-add_dependencies(arpa2-headers rfc-headers)
+add_dependencies(arpa2-modules rfc-modules)
 add_custom_target(arpa2-docs ALL)
 add_asn1_documents(arpa2-docs
 	kxover
