--- a/rfc/CMakeLists.txt
+++ b/rfc/CMakeLists.txt
@@ -1,10 +1,10 @@
-# Conversion of ASN.1 specs to convenient header files
-include(MacroASN1Header)
+# Conversion of ASN.1 specs to convenient C header files and Python packages
+include(MacroASN1Module)
 
 set_asn2quickder_options(-I ${CMAKE_SOURCE_DIR}/rfc)
 
-add_custom_target(rfc-headers ALL)
-add_asn1_headers(rfc-headers
+add_custom_target(rfc-modules ALL)
+add_asn1_modules(rfc-modules
 	rfc1422
 	rfc2315
 	rfc2578
