--- a/arpa2/module-test.py.in
+++ b/arpa2/module-test.py.in
@@ -1,6 +1,6 @@
 
 import sys
-sys.path = [ '../../python', 'quick-der' ] + sys.path
+sys.path = [ '../../python', 'quick-der', '../rfc/quick-der' ] + sys.path
 
 import @ASN1_MODULE_NAME@
 
