Python: support running tests of Python bits
To run the tests, we need to have an installed Python module,
so install it to a part of the build tree; this leaves a
build/python/quick_der directory that can be added to
PYTHON_PATH even before installing any of the Python modules.

Makes it possible to run tests on a clean system with an out-
of-source build. Adjust the test-template to include that
extra path.

Rename the test-modules, too. Instead of testing <foo>
with a python module named <foo> that does "import <foo>",
call the test-module <foo-test>. In some cases (e.g. running
the test-script from a parent directory) the test-module
<foo> is already registered with sys.modules as <foo>,
so the inner import does nothing -- and so doesn't test the
generated module.

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -13,10 +13,16 @@ execute_process(COMMAND python -c "from distutils.sysconfig import get_python_li
 configure_file (setup.py.in ${CMAKE_CURRENT_BINARY_DIR}/setup.py @ONLY)
 
 add_custom_command (OUTPUT quickder-shared-module-build
-			COMMAND python ${CMAKE_CURRENT_BINARY_DIR}/setup.py build)
+			COMMAND python ${CMAKE_CURRENT_BINARY_DIR}/setup.py build
+			COMMAND python ${CMAKE_CURRENT_BINARY_DIR}/setup.py install --root ${CMAKE_CURRENT_BINARY_DIR}/quick_der --install-platlib .
+	)
 add_custom_target (quickder-shared-module ALL
 		DEPENDS quickder-shared-module-build)
-
+add_custom_command (TARGET quickder-shared-module
+	POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/api.py ${CMAKE_CURRENT_BINARY_DIR}/quick_der
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py ${CMAKE_CURRENT_BINARY_DIR}/quick_der
+	)
 
 #OLD# install(FILES _quickder.so DESTINATION ${PYTHON_SITE_PACKAGES}/quick_der)
 
