--- a/rfc/module-test.py.in
+++ b/rfc/module-test.py.in
@@ -1,6 +1,8 @@
 
 import sys
-sys.path = [ '../../python', 'quick-der' ] + sys.path
+# ../../python is (once this test is being run) the source-dir python,
+#    ../python is inside the build-directory
+sys.path = [ '../../python', '../python', 'quick-der' ] + sys.path
 
 import @ASN1_MODULE_NAME@
 
