Split Python package; made asn2quickder depend on bare minimum (in source). This resolves bootstrapping dependencies, especially not needing _quickder.so
Introduced actual package dirs quick_der in source and build, used in tests

Moved all Python handling to setup.py and cleared it out of CMakeLists.txt

Pre-install of _quickder.so and static + generated .py files in installroot

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,9 +1,5 @@
 # Provisioning Python compilation and installation
 
-execute_process(COMMAND python -c "from distutils.sysconfig import get_python_lib; print get_python_lib()"
-		OUTPUT_VARIABLE PYTHON_SITE_PACKAGES
-		OUTPUT_STRIP_TRAILING_WHITESPACE)
-
 # Compile the modules?  It only speeds up module loading, not runtime...
 # python -c 'import py_compile; py_compile.compile ("MODULE.py")'
 # python -c 'import compileall; compileall.compile_dir (".")'
@@ -13,19 +9,15 @@ execute_process(COMMAND python -c "from distutils.sysconfig import get_python_li
 configure_file (setup.py.in ${CMAKE_CURRENT_BINARY_DIR}/setup.py @ONLY)
 
 add_custom_command (OUTPUT quickder-shared-module-build
+			COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/quick_der/*.py ${CMAKE_CURRENT_BINARY_DIR}/quick_der
 			COMMAND python ${CMAKE_CURRENT_BINARY_DIR}/setup.py build
-			COMMAND python ${CMAKE_CURRENT_BINARY_DIR}/setup.py install --root ${CMAKE_CURRENT_BINARY_DIR}/quick_der --install-platlib .
+			COMMAND python ${CMAKE_CURRENT_BINARY_DIR}/setup.py install --root ${CMAKE_CURRENT_BINARY_DIR}/installroot --install-platlib .
+			DEPENDS rfc-modules itu-modules arpa2-modules
 	)
 add_custom_target (quickder-shared-module ALL
 		DEPENDS quickder-shared-module-build)
-add_custom_command (TARGET quickder-shared-module
-	POST_BUILD
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/api.py ${CMAKE_CURRENT_BINARY_DIR}/quick_der
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py ${CMAKE_CURRENT_BINARY_DIR}/quick_der
-	)
+#NOMORE# add_custom_command (TARGET quickder-shared-module
+	#NOMORE# PRE_BUILD
+	#NOMORE# )
 
-#OLD# install(FILES _quickder.so DESTINATION ${PYTHON_SITE_PACKAGES}/quick_der)
-
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/api.py DESTINATION ${PYTHON_SITE_PACKAGES}/quick_der)
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py DESTINATION ${PYTHON_SITE_PACKAGES}/quick_der)
-install(CODE "execute_process(COMMAND ${CMAKE_CURRENT_BINARY_DIR}/setup.py install)")
+install(CODE "execute_process(COMMAND python setup.py install WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})")
