--- a/arpa2/module-test.py.in
+++ b/arpa2/module-test.py.in
@@ -1,10 +1,9 @@
 
 import sys
-# ../../python is (once this test is being run) the source-dir python,
-#    ../python is inside the build-directory
-sys.path = [ '../../python', '../python', 'quick-der', '../rfc/quick-der' ] + sys.path
 
-import @ASN1_MODULE_NAME@
+sys.path = [ '@CMAKE_BINARY_DIR@/python/installroot' ] + sys.path
+
+import quick_der.@ASN1_MODULE_NAME@
 
 sys.exit (0)
 
