Python: handle options when defining dependencies of the build.
If you switch off the SPEC-options, dependencies listed explicitly
in the python/ directory break. Instead, add an intermediate (fake)
dependency which gets added to by the directories containing specs.

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -8,17 +8,22 @@
 
 configure_file (setup.py.in ${CMAKE_CURRENT_BINARY_DIR}/setup.py @ONLY)
 
+# The asn1-spec-modules target is special; it is empty here,
+# but the spec-directories (e.g. rfc/, itu/ and arpa2/) add
+# dependencies to it via macro add_asn1_modules(), so that the
+# python bindings are generated before asn1-spec-modules --
+# then the shared-module-build can pick them up.
+add_custom_command(OUTPUT asn1-spec-modules-fake COMMAND true)
+add_custom_target(asn1-spec-modules ALL DEPENDS asn1-spec-modules-fake)
+
 add_custom_command (OUTPUT quickder-shared-module-build
 			COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/quick_der/*.py ${CMAKE_CURRENT_BINARY_DIR}/quick_der
 			COMMAND python ${CMAKE_CURRENT_BINARY_DIR}/setup.py build
 			COMMAND python ${CMAKE_CURRENT_BINARY_DIR}/setup.py install --root ${CMAKE_CURRENT_BINARY_DIR}/installroot --install-platlib .
-			DEPENDS rfc-modules itu-modules arpa2-modules
+			DEPENDS asn1-spec-modules
 	)
 add_custom_target (quickder-shared-module ALL
 		DEPENDS quickder-shared-module-build)
-#NOMORE# add_custom_command (TARGET quickder-shared-module
-	#NOMORE# PRE_BUILD
-	#NOMORE# )
 
 # Note special evaluation rules for if(); do not use ${CMAKE_INSTALL_PREFIX} in if() to test non-emptiness.
 if (CMAKE_INSTALL_PREFIX)
