Now able to reproduce DER unpacked content with anASN1Object._der_pack()  - tested in test/certio.py using test/verisigin.der (X.509 certificate)  - works in spite of nested SEQUENCE OF and SET OF, and "funny" types  - explicitly used der_pack() / der_unpack() to mean "with DER header"  - additionally used der_format() / der_parse() to mean "DER body only"  - updated test/der_pack() with changes; renamed it to test/der_format()

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,7 +14,7 @@ add_test(certio-py-test
 add_test(empty-py-test
 	python ${CMAKE_CURRENT_SOURCE_DIR}/empty-instance.py)
 add_test(pack-py-test
-	python ${CMAKE_CURRENT_SOURCE_DIR}/der_pack.py)
+	python ${CMAKE_CURRENT_SOURCE_DIR}/der_format.py)
 
 add_executable (ldap.test
 	ldapsearch.c)
