Python: also install asn1literate tool

--- a/tool/CMakeLists.txt
+++ b/tool/CMakeLists.txt
@@ -6,3 +6,8 @@ install(FILES
 	DESTINATION bin
 	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 	RENAME asn2quickder)
+install(FILES
+	${CMAKE_CURRENT_SOURCE_DIR}/asn1literate.py
+	DESTINATION bin
+	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+	RENAME asn1literate)
