--- a/contrib/pkgconfig/Quick-DER.pc.in
+++ b/contrib/pkgconfig/Quick-DER.pc.in
@@ -1,6 +1,6 @@
 prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
-includedir=${prefix}/include/quick-der
+includedir=${prefix}/include
 libdir=${prefix}/lib
 
 Name: quick-der
