CMake: streamline ASN1 module
 - bump version
 - install test stubs for asn1 modules
 - find asn2quickder
 - simplify use of add_asn1_modules
 - tidy documentation
 - automatically add targets as needed for asn1 generation
   (top-level asn1-spec-modules and <groupname>)
 - rename bundled asn1ate to asn2qd1ate, because the existing asn1ate
   (e.g. from pip) doesn't work; we need to install this one
   for use downstream.

--- a/tool/CMakeLists.txt
+++ b/tool/CMakeLists.txt
@@ -1,6 +1,4 @@
-# Install only the driver; assume asn1ate comes from elsewhere
-# (even though we ship it as part of the sources) -- this is
-# because installing a python subtree is too complicated for now.
+# Install the driver scripts
 install(FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/asn2quickder.py
 	DESTINATION bin
@@ -11,3 +9,25 @@ install(FILES
 	DESTINATION bin
 	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 	RENAME asn1literate)
+
+# Install our own fork of asn1ate
+file(COPY setup.py DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+execute_process (COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/asn2qd1ate)
+
+add_custom_command (OUTPUT quickder-asn2qd1ate-build
+			COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/asn2qd1ate/*.py ${CMAKE_CURRENT_BINARY_DIR}/asn2qd1ate
+			COMMAND python setup.py build
+			COMMAND python setup.py install --root ${CMAKE_CURRENT_BINARY_DIR}/installroot --install-platlib .
+			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+	)
+add_custom_target (quickder-asn2qd1ate ALL
+		DEPENDS quickder-asn2qd1ate-build)
+
+if (CMAKE_INSTALL_PREFIX)
+	set(_python_install_args --prefix ${CMAKE_INSTALL_PREFIX})
+else ()
+	set(_python_install_args "")
+endif ()
+
+install(CODE "execute_process(COMMAND python setup.py install ${_python_install_args} WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})")
