--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -26,11 +26,12 @@ add_custom_command (OUTPUT quickder-shared-module-build
 add_custom_target (quickder-shared-module ALL
 		DEPENDS quickder-shared-module-build)
 
-# Note special evaluation rules for if(); do not use ${CMAKE_INSTALL_PREFIX} in if() to test non-emptiness.
-if (CMAKE_INSTALL_PREFIX)
-	set(_python_install_args --prefix ${CMAKE_INSTALL_PREFIX})
-else ()
-	set(_python_install_args "")
-endif ()
+if (NOT NO_INSTALL_PYTHON)
+	if (CMAKE_INSTALL_PREFIX)
+		set(_python_install_args --prefix ${CMAKE_INSTALL_PREFIX})
+	else ()
+		set(_python_install_args "")
+	endif ()
 
-install(CODE "execute_process(COMMAND python setup.py install ${_python_install_args} WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})")
+	install(CODE "execute_process(COMMAND python setup.py install ${_python_install_args} WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})")
+endif()
