--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - BUILDDIR=`pwd`/build SRCDIR=`pwd` sh ci/travis-continuous.sh
 
 install:
-  - ( cd build && make install )
+  - ( cd build && sudo make install )
 
 script:
   - ( cd build && make test )
