--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,6 @@
-#[bdist_wheel]
-#universal=1
-
 [tool:pytest]
 addopts= --tb native -v -r fxX --maxfail=25 -p no:warnings
-python_files=tests/*test_*.py
+python_files=python/tests/*test_*.py
 
 [aliases]
 test=pytest
