--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,10 @@ endif()
 #
 add_subdirectory (lib)
 
+if (NOT NO_INSTALL_PYTHON)
+    add_subdirectory (python)
+endif ()
+
 if (SPEC_RFC)
 	add_subdirectory (rfc)
 endif ()
@@ -70,7 +74,6 @@ endif ()
 
 if (NOT NO_TESTING)
     add_subdirectory (test)
-    add_test(NAME python_test COMMAND python setup.py test)
 endif()
 
 add_uninstall_target ()
