--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,9 @@
-include data/*.asn1
-recursive-include python/ *.py
+recursive-include python/quick_der *.py
+recursive-include python/tests *.py
+include python/data/*.asn1
+include python/scripts/*
 include python/src/_quickder.c
 include lib/der_header.c
 include lib/der_unpack.c
-include lib/der_pack.c"
+include lib/der_pack.c
 include include/quick-der/api.h
