add travis file (#47)
* add travis file

* Wrangle Travis

 - add in a script for building Quick DER including dependencies
 - let Travis run the script, instead of putting the whole build
   instruction in the .travis.yml file.

* Wrangle Travis

 - Be more verbose in building, and quicker to error out.

* enable root

* sudo the install

* install the python module

* install in install step

* echo commands

* weird shell

* use https so git doesnt ask key question

* move setup.py to root

* rename to pyquickder

* build from root

* disable python/cmake integration

* reintroduce the cmake python file, add python target

* forgot to add this one

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,10 @@ endif()
 #
 add_subdirectory (lib)
 
-add_subdirectory (python)
+if (NOT NO_INSTALL_PYTHON)
+    add_subdirectory (python)
+endif ()
+
 if (SPEC_RFC)
 	add_subdirectory (rfc)
 endif ()
