fix failing test runs

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,31 @@ build
 quick-der.kdev4
 Testing
 *.pyc
+
+dist/
+*.egg-info/
+.venv*/
+.virtualenv*/
+*.so
+*.dylib
+.cache/
+.eggs/
+
+kxover.h
+python/tests/kxover.h
+python/tests/test01.h
+python/tests/test01.py
+python/tests/test01a.h
+python/tests/test01a.py
+python/tests/test02.h
+python/tests/test02.py
+python/tests/test04.h
+python/tests/test04.py
+test01.h
+test01.py
+test01a.h
+test01a.py
+test02.h
+test02.py
+test04.h
+test04.py
