--- a/cmake/module-test.py.in
+++ b/cmake/module-test.py.in
@@ -1,9 +1,9 @@
 
 import sys
 
-sys.path = [ '@CMAKE_BINARY_DIR@/python/installroot' ] + sys.path
+sys.path = [ '@CMAKE_BINARY_DIR@/python/testing' ] + sys.path
 
-import quick_der.@ASN1_MODULE_NAME@
+import @ASN1_MODULE_NAME@
 
 sys.exit (0)
 
