Added der_put_bool() and der_get_bool() helper functions. Why?  Because DER wants FALSE encoded as 0x00 and TRUE as 0xff, while BER is agnostic.  And because it may be possible to ignore lengths other than 1 byte, and still make some sense of such non-minimal encoding (by looking at zero versus non-zero) and use that to be lenient on interpreting the transit data.  That, however, is a choice.  BER acceptability is general however, as we do that across the board with Quick DER recognition.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -47,3 +47,11 @@ target_link_libraries (int_putget.test
 	quickderStatic)
 add_test (int_putget.test
 	int_putget.test)
+
+add_executable (bool_putget.test
+	bool_putget.c)
+target_link_libraries (bool_putget.test
+	quickderStatic)
+add_test (bool_putget.test
+	bool_putget.test)
+
