--- a/contrib/cmake/Quick-DERConfig.cmake.in
+++ b/contrib/cmake/Quick-DERConfig.cmake.in
@@ -9,5 +9,14 @@ get_filename_component(Quick-DER_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
 set(Quick-DER_LIB_DIRS "@CONF_LIB_DIRS@")
 set(Quick-DER_INCLUDE_DIRS "@CONF_INCLUDE_DIRS@")
 
-get_filename_component(Quick-DER_LIBRARIES "${Quick-DER_LIB_DIRS}/libquickder.so" ABSOLUTE)
-get_filename_component(Quick-DER_STATIC_LIBRARIES "${Quick-DER_LIB_DIRS}/libquickder.a" ABSOLUTE)
+get_filename_component(
+    Quick-DER_LIBRARIES
+    "${Quick-DER_LIB_DIRS}/libquickder${CMAKE_SHARED_LIBRARY_SUFFIX}"
+    ABSOLUTE
+)
+
+get_filename_component(
+    Quick-DER_STATIC_LIBRARIES
+    "${Quick-DER_LIB_DIRS}/libquickder${CMAKE_STATIC_LIBRARY_SUFFIX}"
+    ABSOLUTE
+)
