Fixed order of testing Include files were tested before indirect include files got generated.Z

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,8 @@ if (NOT NO_INSTALL_PYTHON)
     add_subdirectory (python)
 endif ()
 
+add_custom_target (asn2quickder-done)
+
 if (SPEC_RFC)
 	add_subdirectory (rfc)
 endif ()
