Added library methods to get/put BIT STRING values  - one version allows working with a bit/flag at a time  - one version allows working with a byte at a time  - support for non-byte boundaries; receive BER, send DER  - elaborate testing routines included

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -23,6 +23,10 @@ set(quickder_SRC
 	der_put_uint32.c
 	der_get_bool.c
 	der_put_bool.c
+	der_get_bitstring_flag.c
+	der_put_bitstring_flag.c
+	der_get_bitstring_by_eight.c
+	der_put_bitstring_by_eight.c
 	der_cmp.c
 )
 
