--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,8 @@
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
+set(_ppath $ENV{PYTHONPATH})
 set(_python_test ${CMAKE_COMMAND} -E env PYTHONPATH=${CMAKE_SOURCE_DIR}/python:${_ppath} python)
+
 # Test X509 decode/encode
 add_executable (certio.test
 	certio.c)
