CMake: force use of source-based python script for build
 - The script might be installed by a previous version. Don't want
   that version to be used for the new build.
 - Also fixes corner case where CMake found and cached the installed
   version, which would then block the build if the installed version
   was removed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,15 @@ endif()
 #
 add_subdirectory (lib)
 
+include(PythonSupport)
+FindPythonInterpreter()
+
+# This is a hack to make sure that, while building
+# Quick DER, the asn2quickder script from the SOURCE
+# is used, not an already installed one.
+set(_qd_asn2quickder ${CMAKE_SOURCE_DIR}/python/scripts/asn2quickder
+    CACHE FILEPATH "Path to asn2quickder script" FORCE)
+
 if (NOT NO_INSTALL_PYTHON)
     add_subdirectory (python)
 endif ()
