Isolated DPRINTF() and DER_DUMP() into qd-int.h  - Internal include file for internal symbol  - Do not distribute, do not include

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories(${CMAKE_SOURCE_DIR}/include)
+include_directories(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/lib)
 
 set(_ppath $ENV{PYTHONPATH})
 set(_python_test ${CMAKE_COMMAND} -E env PYTHONPATH=${CMAKE_SOURCE_DIR}/python:${_ppath} python)
