der_cmp_int() is a pretty clever INTEGER compare  - length differences mean the longest determines  - often just the sign bit of one INTEGER determines  - when sizes are equal, use memcmp()

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -24,6 +24,7 @@ set(quickder_SRC
 	der_get_bool.c
 	der_put_bool.c
 	der_cmp.c
+	der_cmp_int.c
 )
 
 add_library (quickderShared SHARED ${quickder_SRC})
