Default put/unput routines  - After der_unpack() use der_put_default() to allow defaults to be set  - Before der_pack() use der_unput_default() to remove values matching the default

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -23,6 +23,8 @@ set(quickder_SRC
 	der_put_uint32.c
 	der_get_bool.c
 	der_put_bool.c
+	der_put_default.c
+	der_unput_default.c
 	der_cmp.c
 	der_cmp_int.c
 )
